Update SPARQL query to include activation promoters.